[gd_scene load_steps=11 format=3 uid="uid://qffbaxvbefdk"]

[ext_resource type="Script" uid="uid://dvtvegiw2dreu" path="res://scripts/slime.gd" id="1_n6pvg"]
[ext_resource type="Texture2D" uid="uid://b7ryahpg7le7s" path="res://sprites/slime_green.png" id="1_p2gj0"]
[ext_resource type="PackedScene" uid="uid://bl66fmwcso45b" path="res://scenes/killzone.tscn" id="2_n6pvg"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ppcr1"]
atlas = ExtResource("1_p2gj0")
region = Rect2(0, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_jayke"]
atlas = ExtResource("1_p2gj0")
region = Rect2(24, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_2002g"]
atlas = ExtResource("1_p2gj0")
region = Rect2(48, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_bratd"]
atlas = ExtResource("1_p2gj0")
region = Rect2(72, 24, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_5b0gg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ppcr1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jayke")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2002g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bratd")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_da4t2"]
size = Vector2(14, 12)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n6pvg"]
size = Vector2(13, 13)

[node name="Slime" type="CharacterBody2D"]
collision_layer = 8
collision_mask = 4
script = ExtResource("1_n6pvg")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_5b0gg")
autoplay = "default"
frame_progress = 0.37847078

[node name="Killzone" parent="AnimatedSprite2D" instance=ExtResource("2_n6pvg")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimatedSprite2D/Killzone"]
position = Vector2(0, 6)
shape = SubResource("RectangleShape2D_da4t2")

[node name="RayCastRight" type="RayCast2D" parent="."]
position = Vector2(0, 5)
target_position = Vector2(10, 0)

[node name="RayCastLeft" type="RayCast2D" parent="."]
position = Vector2(0, 5)
target_position = Vector2(-11, 0)

[node name="FloorCheckLeft" type="RayCast2D" parent="."]
target_position = Vector2(-14, 14)

[node name="FloorCheckRight" type="RayCast2D" parent="."]
target_position = Vector2(13, 14)

[node name="Hitbox" type="CollisionShape2D" parent="."]
light_mask = 2
position = Vector2(-0.5, 3.5)
shape = SubResource("RectangleShape2D_n6pvg")
